# django-angular3

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DJANGO_PACKAGE.md  GENERATE_SKILLS.md  LICENSE  MANIFEST.in  README.md  TODO.md  django-angular3.json  e2e_enabling_documentation_plan.md  pyproject.toml  requirements.txt  runtests.py
.claude/skills/ng-workspace/: SKILL.md
.claude/skills/ng-workspace/context/: angular-conventions.md
.claude/skills/ng-workspace/scripts/: preflight.py  (+1 more)
.claude/skills/shared/: angular-conventions.md
.github/: copilot-instructions.md
.github/workflows/: build.yml  deploy.yml
django_angular3/: __init__.py  admin.py  angular.py  apps.py  build.py  cli.py  config.py  documents.py  models.py  settings.py  tools.py  urls.py  validation.py  views.py
django_angular3/examples/01_simple_crm/: django-angular3.json  manage.py  ui.json
django_angular3/management/: __init__.py
django_angular3/management/commands/: __init__.py  _base.py  build_app.py  export_schema.py  ng_add.py  ng_build.py  ng_config.py  ng_gen_app.py  ng_init.py  ng_new.py  ng_openapi_gen.py  ng_workspace.py  ng_workspace_delete.py  ng_workspace_modify.py
django_angular3/migrations/: __init__.py
doc/: APP_BUILDER_REQUIREMENTS.md  ARCHITECTURE.md  GENERATE_AI_AUTOMATIONS.md  GENERATE_SKILLS.md  IMPLEMENTATION_PLAN.md  RELEASING.md  REQUIREMENTS.md  SKILL_AUTHORING_PLAN.md  TEST_EXAMPLES.md  TOOLS_HOOKS_SKILLS_ANALYSIS.md  document_validate_plan.md  documents_refresh.md  phased_implementation_plan.md
docs/: commands.md  conf.py  configuration.md  getting-started.md  index.md  overview.md  requirements.txt  workflow.md
docs/api/: angular.md  build.md  cli.md  config.md  index.md  settings.md  validation.md
skill_creation/: README.md  skill-building.md
skill_creation/shared/: angular-conventions.md  angular-material-patterns.md  openapi-integration.md  skill-architecture.md  templates.md
skill_creation/skills/: 01-angular-workspace-foundation.md  01-ng-workspace.md  02-angular-app-composition.md  02-ng-app.md  03-angular-api-integration.md  03-ng-api.md  04-angular-data-service-composition.md  04-ng-data-service.md  05-angular-field-component-composition.md  05-ng-field-component.md  05-ng-small-field.md  06-angular-form-field-composition.md  06-ng-form-field.md  07-angular-component-composition.md  07-ng-component.md  08-angular-complex-component-composition.md  08-ng-complex-component.md  09-angular-reactive-form-composition.md  09-ng-reactive-form.md  10-angular-page-composition.md  10-ng-page.md  11-angular-site-composition.md  11-ng-site.md
spec/examples/01_simple_crm/: db.sqlite3  django-angular3.json  schema.yaml
spec/openapi/ng-openapi-gen/: ng-openapi-gen.json
spec/openapi/openapi-generator/: typescript-angular.json
spec/openapi/source/: example.openapi.json
spec/ui/: example.ui.json
tests/: __init__.py  test_angular_commands.py  test_cli_scaffold.py  test_export_schema.py  test_ngdj_requirements.py  test_settings.py  test_smoke.py
tmparea/simple_crm/: asgi.py  settings.py  urls.py  wsgi.py
(+11 files in other folders)
