[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-angular3"
version = "0.1.0a1"
description = "Contract-first integration tooling for Django REST framework and Angular Material."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["django", "djangorestframework", "angular", "openapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "Django>=5.0",
  "djangorestframework",
  "django-filter",
  "drf-spectacular",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]

[project.scripts]
django-angular3 = "django_angular3.cli:main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["django_angular3*"]
