[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-angular3"
version = "0.1.0"
description = "Contract-first integration tooling for Django REST framework and Angular Material."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["django", "djangorestframework", "angular", "openapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "Django>=5.1",
  "djangorestframework",
  "django-filter",
  "drf-spectacular",
  "claude-agent-sdk",
]

[project.urls]
Homepage = "https://djangoangular.com/"
Repository = "https://github.com/shlomoa/django-angular3"

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
docs = [
  "sphinx>=8.0",
  "furo>=2024.1.29",
  "myst-parser>=3.0",
]
dev = [
  "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["django_angular3"]

[project.scripts]
django-angular3 = "django_angular3.cli:main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["django_angular3*"]

[tool.setuptools.package-data]
django_angular3 = [
    "examples/**/*",
    "templates/django_angular3/**/*",
    "static/django_angular3/**/*",
]
